# library-rag-ingest

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/core/: config.py  db.py
app/routers/: analytics.py  books.py  inventory.py  search.py
app/services/: inventory.py  query_classifier.py  rag.py  search.py
docs/: API_BRIEF.md  ISBNDB_SETUP.md  PROJECT_BRIEF.md
lib/: __init__.py  _path.py  db.py  isbn.py  models.py  query_classifier.py
scripts/: backfill_search_tsv.py  backfill_ucsd_book_id.py  dedup_reviews.py  download_datasets.py  enrich_isbndb.py  ingest_cmu_summaries.py  ingest_goodreads_bbe.py  ingest_ucsd_graph.py  inspect_schema.py
scripts/embedding/: embed_sample.py  mark_embed_queue.py  test_embeddings.py
static/: index.html
