[project]
name = "library-rag-ingest"
version = "0.1.0"
description = "CS 410 Group 3 - data ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gdown>=5.2.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "openai>=1.109.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.uv]
package = false
